--- a/portfolio.html
+++ b/portfolio.html
@@ -216,6 +216,7 @@
     <!-- Футер -->
     <footer class="footer">
         <div class="container flex">
+
             <div class="logotype">
                 <a class="logo-footer" href="./index.html">Web<span class="logo-title-footer">Studio</span></a> 
                 <address class="address">
@@ -226,6 +227,7 @@
                     </ul>
                 </address>
             </div>
+
             <div class="network-address">
                 <h2 class="slogan">присоединяйтесь</h2>
                 <ul class="network-list">
@@ -262,6 +264,18 @@
                     </li>
                 </ul>
 
+            </div>
+
+            <div class="form-foter">
+                <b class="form-title">Подпишитесь на рассылку</b>
+                <form class="contact-form" name="contact-form">
+                    <input class="email-input" type="email" name="email" id="email" placeholder="E-mail">
+                    <button class="btn-subscribe" type="submit">Подписаться
+                        <svg class="icon-send" width="24" height="24">
+                            <use href="./img-studio/sprite-modal.svg#icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
             </div>
             
         </div>
