Исправляет иконку name, и делает hover, focus на input

--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                         <input class="form-modal-input" type="text" name="user-name" 
                         minlength="3" placeholder=" " required />
                         <svg class="form-modal-icon" width="18" height="18">
-                            <use href="./img-studio/sprite-modal.svg#icon-name"></use>
+                            <use href="./img-studio/sprite-modal.svg#icon-person-black"></use>
                         </svg>
                     </label>
                     
