--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             
                             <label class="form-modal-group">
                                 <span class="form-modal-label">Почта</span>
-                                <input class="form-modal-input" type="mail" name="user-mail" placeholder=" " required />
+                                <input class="form-modal-input" type="email" name="user-mail" placeholder=" " required />
                                 <svg class="form-modal-icon" width="18" height="18">
                                     <use href="./img-studio/sprite-modal.svg#icon-email-black"></use>
                                 </svg>
