Делает доступность страницу с клавиатуры
добавлен tabindex

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                         </div>
                         <!-- Чекбокс -->
                         <label class="form-policy-group">
-                            <input class="checkbox visually-hidden" type="checkbox" name="mark" />
-                            <span class="custom-checkbox" role="checkbox">
+                            <input class="checkbox visually-hidden" type="checkbox" name="mark" tabindex="-1"/>
+                            <span class="custom-checkbox" tabindex="0" role="checkbox">
                                 <svg class="custom-checkbox-icon" width="16" height="15">
                                     <use href="./img-studio/sprite-modal.svg#icon-vector"></use>
                                 </svg>
