--- a/index.html
+++ b/index.html
@@ -17,28 +17,29 @@
 <body>
     <!-- Шапка сайта -->
     <header class="header">
-        <div class="container header-container">
-            <a class="logo" href="./index.html">Web<span class="logo-title">Studio</span></a> 
-            <nav class="nav-box">
-                <ul class="navigation-links">
-                    <li class="site-nav">
-                        <a class="link-nav current" href="./index.html">Студия</a>
+        <div class="container header__container">
+            <a class="logo" href="./index.html">Web<span class="logo__title">Studio</span></a> 
+
+            <nav class="navigation">
+                <ul class="navigation__list">
+                    <li class="navigation__item">
+                        <a class="navigation__link current" href="./index.html">Студия</a>
                     </li>
 
-                    <li class="site-nav">
-                        <a class="link-nav" href="./portfolio.html">Портфолио</a>
+                    <li class="navigation__item">
+                        <a class="navigation__link" href="./portfolio.html">Портфолио</a>
                     </li>
 
-                    <li class="site-nav">
-                        <a class="link-nav" href="">Контакты</a>
+                    <li class="navigation__item">
+                        <a class="navigation__link" href="">Контакты</a>
                     </li>
                 </ul>
             </nav>
 
-            <ul class="contact-box">
-                <li class="site-contact">
-                    <a class="contact-nav" href="mailto:info@devstudio.com">
-                        <svg class="contact-icon" width="16" height="12">
+            <ul class="contact__list">
+                <li class="contact__item">
+                    <a class="contact__link" href="mailto:info@devstudio.com">
+                        <svg class="contact__icon" width="16" height="12">
                             <use href="./img-studio/sprite-main.svg#mail">
                             </use>
                         </svg>
@@ -46,9 +47,9 @@
                     </a>
                 </li>
 
-                <li class="site-contact">
-                    <a class="contact-nav" href="tel:+380961111111">
-                        <svg class="contact-icon" width="10" height="16">
+                <li class="contact__item">
+                    <a class="contact__link" href="tel:+380961111111">
+                        <svg class="contact__icon" width="10" height="16">
                             <use href="./img-studio/sprite-main.svg#phone">
                             </use>
                         </svg>
@@ -462,7 +463,7 @@
         <div class="container flex">
 
             <div class="logotype">
-                <a class="logo-footer" href="./index.html">Web<span class="logo-title-footer">Studio</span></a> 
+                <a class="logo-footer" href="./index.html">Web<span class="logo__title-footer">Studio</span></a> 
                 <address class="address">
                     <ul>
                         <li class="address-item"><a class="address-text" href="">г. Киев, пр-т Леси Украинки, 26</a></li>
